// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test_setup.sql > line 24 1`] = `
[
  "GRANT ALL ON SCHEMA public TO public",
  {
    "stmts": [
      {
        "stmt": {
          "GrantStmt": {
            "behavior": "DROP_RESTRICT",
            "grantees": [
              {
                "RoleSpec": {
                  "location": 30,
                  "roletype": "ROLESPEC_PUBLIC",
                },
              },
            ],
            "is_grant": true,
            "objects": [
              {
                "String": {
                  "sval": "public",
                },
              },
            ],
            "objtype": "OBJECT_SCHEMA",
            "targtype": "ACL_TARGET_OBJECT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 27 1`] = `
[
  "SET allow_in_place_tablespaces = true",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 33,
                  "sval": {
                    "sval": "true",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "allow_in_place_tablespaces",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 40 1`] = `
[
  "INSERT INTO CHAR_TBL (f1) VALUES
  ('a'),
  ('ab'),
  ('abcd'),
  ('abcd    ')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 22,
                  "name": "f1",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "char_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 36,
                            "sval": {
                              "sval": "a",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 45,
                            "sval": {
                              "sval": "ab",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 55,
                            "sval": {
                              "sval": "abcd",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 67,
                            "sval": {
                              "sval": "abcd    ",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 47 1`] = `
[
  "CREATE TABLE FLOAT8_TBL(f1 float8)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "float8_tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "is_local": true,
                  "location": 24,
                  "typeName": {
                    "location": 27,
                    "names": [
                      {
                        "String": {
                          "sval": "float8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 49 1`] = `
[
  "INSERT INTO FLOAT8_TBL(f1) VALUES
  ('0.0'),
  ('-34.84'),
  ('-1004.30'),
  ('-1.2345678901234e+200'),
  ('-1.2345678901234e-200')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 23,
                  "name": "f1",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "float8_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 37,
                            "sval": {
                              "sval": "0.0",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 48,
                            "sval": {
                              "sval": "-34.84",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 62,
                            "sval": {
                              "sval": "-1004.30",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 78,
                            "sval": {
                              "sval": "-1.2345678901234e+200",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 107,
                            "sval": {
                              "sval": "-1.2345678901234e-200",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 57 1`] = `
[
  "CREATE TABLE INT2_TBL(f1 int2)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "int2_tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "int2",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 59 1`] = `
[
  "INSERT INTO INT2_TBL(f1) VALUES
  ('0   '),
  ('  1234 '),
  ('    -1234'),
  ('32767'),  -- largest and smallest values
  ('-32767')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 21,
                  "name": "f1",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "int2_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 35,
                            "sval": {
                              "sval": "0   ",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 47,
                            "sval": {
                              "sval": "  1234 ",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 62,
                            "sval": {
                              "sval": "    -1234",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 79,
                            "sval": {
                              "sval": "32767",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 124,
                            "sval": {
                              "sval": "-32767",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 67 1`] = `
[
  "CREATE TABLE INT4_TBL(f1 int4)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "int4_tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 69 1`] = `
[
  "INSERT INTO INT4_TBL(f1) VALUES
  ('   0  '),
  ('123456     '),
  ('    -123456'),
  ('2147483647'),  -- largest and smallest values
  ('-2147483647')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 21,
                  "name": "f1",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "int4_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 35,
                            "sval": {
                              "sval": "   0  ",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 49,
                            "sval": {
                              "sval": "123456     ",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 68,
                            "sval": {
                              "sval": "    -123456",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 87,
                            "sval": {
                              "sval": "2147483647",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 137,
                            "sval": {
                              "sval": "-2147483647",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 77 1`] = `
[
  "CREATE TABLE INT8_TBL(q1 int8, q2 int8)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "int8_tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "q1",
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "int8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "q2",
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 34,
                    "names": [
                      {
                        "String": {
                          "sval": "int8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 79 1`] = `
[
  "INSERT INTO INT8_TBL VALUES
  ('  123   ','  456'),
  ('123   ','4567890123456789'),
  ('4567890123456789','123'),
  (+4567890123456789,'4567890123456789'),
  ('+4567890123456789','-4567890123456789')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "int8_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 31,
                            "sval": {
                              "sval": "  123   ",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 42,
                            "sval": {
                              "sval": "  456",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 55,
                            "sval": {
                              "sval": "123   ",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 64,
                            "sval": {
                              "sval": "4567890123456789",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 88,
                            "sval": {
                              "sval": "4567890123456789",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 107,
                            "sval": {
                              "sval": "123",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "location": 118,
                            "name": [
                              {
                                "String": {
                                  "sval": "+",
                                },
                              },
                            ],
                            "rexpr": {
                              "A_Const": {
                                "fval": {
                                  "fval": "4567890123456789",
                                },
                                "location": 119,
                              },
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 136,
                            "sval": {
                              "sval": "4567890123456789",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 160,
                            "sval": {
                              "sval": "+4567890123456789",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 180,
                            "sval": {
                              "sval": "-4567890123456789",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 87 1`] = `
[
  "CREATE TABLE POINT_TBL(f1 point)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "point_tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "is_local": true,
                  "location": 23,
                  "typeName": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "point",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 89 1`] = `
[
  "INSERT INTO POINT_TBL(f1) VALUES
  ('(0.0,0.0)'),
  ('(-10.0,0.0)'),
  ('(-3.0,4.0)'),
  ('(5.1, 34.5)'),
  ('(-5.0,-12.0)'),
  ('(1e-300,-1e-300)'),  -- To underflow
  ('(1e+300,Inf)'),  -- To overflow
  ('(Inf,1e+300)'),  -- Transposed
  (' ( Nan , NaN ) '),
  ('10.0,10.0')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 22,
                  "name": "f1",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "point_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 36,
                            "sval": {
                              "sval": "(0.0,0.0)",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 53,
                            "sval": {
                              "sval": "(-10.0,0.0)",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 72,
                            "sval": {
                              "sval": "(-3.0,4.0)",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 90,
                            "sval": {
                              "sval": "(5.1, 34.5)",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 109,
                            "sval": {
                              "sval": "(-5.0,-12.0)",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 129,
                            "sval": {
                              "sval": "(1e-300,-1e-300)",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 170,
                            "sval": {
                              "sval": "(1e+300,Inf)",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 206,
                            "sval": {
                              "sval": "(Inf,1e+300)",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 241,
                            "sval": {
                              "sval": " ( Nan , NaN ) ",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 264,
                            "sval": {
                              "sval": "10.0,10.0",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 104 1`] = `
[
  "INSERT INTO TEXT_TBL VALUES
  ('doh!'),
  ('hi de ho neighbor')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "text_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 31,
                            "sval": {
                              "sval": "doh!",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 43,
                            "sval": {
                              "sval": "hi de ho neighbor",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 109 1`] = `
[
  "CREATE TABLE VARCHAR_TBL(f1 varchar(4))",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "varchar_tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "is_local": true,
                  "location": 25,
                  "typeName": {
                    "location": 28,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "varchar",
                        },
                      },
                    ],
                    "typemod": -1,
                    "typmods": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 36,
                        },
                      },
                    ],
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 111 1`] = `
[
  "INSERT INTO VARCHAR_TBL (f1) VALUES
  ('a'),
  ('ab'),
  ('abcd'),
  ('abcd    ')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 25,
                  "name": "f1",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "varchar_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 39,
                            "sval": {
                              "sval": "a",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 48,
                            "sval": {
                              "sval": "ab",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 58,
                            "sval": {
                              "sval": "abcd",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 70,
                            "sval": {
                              "sval": "abcd    ",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 118 1`] = `
[
  "CREATE TABLE onek (
	unique1		int4,
	unique2		int4,
	two			int4,
	four		int4,
	ten			int4,
	twenty		int4,
	hundred		int4,
	thousand	int4,
	twothousand	int4,
	fivethous	int4,
	tenthous	int4,
	odd			int4,
	even		int4,
	stringu1	name,
	stringu2	name,
	string4		name
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "onek",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "unique1",
                  "is_local": true,
                  "location": 21,
                  "typeName": {
                    "location": 30,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "unique2",
                  "is_local": true,
                  "location": 37,
                  "typeName": {
                    "location": 46,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "two",
                  "is_local": true,
                  "location": 53,
                  "typeName": {
                    "location": 59,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "four",
                  "is_local": true,
                  "location": 66,
                  "typeName": {
                    "location": 72,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "ten",
                  "is_local": true,
                  "location": 79,
                  "typeName": {
                    "location": 85,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "twenty",
                  "is_local": true,
                  "location": 92,
                  "typeName": {
                    "location": 100,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "hundred",
                  "is_local": true,
                  "location": 107,
                  "typeName": {
                    "location": 116,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "thousand",
                  "is_local": true,
                  "location": 123,
                  "typeName": {
                    "location": 132,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "twothousand",
                  "is_local": true,
                  "location": 139,
                  "typeName": {
                    "location": 151,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "fivethous",
                  "is_local": true,
                  "location": 158,
                  "typeName": {
                    "location": 168,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "tenthous",
                  "is_local": true,
                  "location": 175,
                  "typeName": {
                    "location": 184,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "odd",
                  "is_local": true,
                  "location": 191,
                  "typeName": {
                    "location": 197,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "even",
                  "is_local": true,
                  "location": 204,
                  "typeName": {
                    "location": 210,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "stringu1",
                  "is_local": true,
                  "location": 217,
                  "typeName": {
                    "location": 226,
                    "names": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "stringu2",
                  "is_local": true,
                  "location": 233,
                  "typeName": {
                    "location": 242,
                    "names": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "string4",
                  "is_local": true,
                  "location": 249,
                  "typeName": {
                    "location": 258,
                    "names": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 141 1`] = `
[
  "CREATE TABLE onek2 AS SELECT * FROM onek",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 13,
                "relname": "onek2",
                "relpersistence": "p",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 36,
                      "relname": "onek",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 29,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 29,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 144 1`] = `
[
  "CREATE TABLE tenk1 (
	unique1		int4,
	unique2		int4,
	two			int4,
	four		int4,
	ten			int4,
	twenty		int4,
	hundred		int4,
	thousand	int4,
	twothousand	int4,
	fivethous	int4,
	tenthous	int4,
	odd			int4,
	even		int4,
	stringu1	name,
	stringu2	name,
	string4		name
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "tenk1",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "unique1",
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 31,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "unique2",
                  "is_local": true,
                  "location": 38,
                  "typeName": {
                    "location": 47,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "two",
                  "is_local": true,
                  "location": 54,
                  "typeName": {
                    "location": 60,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "four",
                  "is_local": true,
                  "location": 67,
                  "typeName": {
                    "location": 73,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "ten",
                  "is_local": true,
                  "location": 80,
                  "typeName": {
                    "location": 86,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "twenty",
                  "is_local": true,
                  "location": 93,
                  "typeName": {
                    "location": 101,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "hundred",
                  "is_local": true,
                  "location": 108,
                  "typeName": {
                    "location": 117,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "thousand",
                  "is_local": true,
                  "location": 124,
                  "typeName": {
                    "location": 133,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "twothousand",
                  "is_local": true,
                  "location": 140,
                  "typeName": {
                    "location": 152,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "fivethous",
                  "is_local": true,
                  "location": 159,
                  "typeName": {
                    "location": 169,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "tenthous",
                  "is_local": true,
                  "location": 176,
                  "typeName": {
                    "location": 185,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "odd",
                  "is_local": true,
                  "location": 192,
                  "typeName": {
                    "location": 198,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "even",
                  "is_local": true,
                  "location": 205,
                  "typeName": {
                    "location": 211,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "stringu1",
                  "is_local": true,
                  "location": 218,
                  "typeName": {
                    "location": 227,
                    "names": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "stringu2",
                  "is_local": true,
                  "location": 234,
                  "typeName": {
                    "location": 243,
                    "names": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "string4",
                  "is_local": true,
                  "location": 250,
                  "typeName": {
                    "location": 259,
                    "names": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 167 1`] = `
[
  "CREATE TABLE tenk2 AS SELECT * FROM tenk1",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 13,
                "relname": "tenk2",
                "relpersistence": "p",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 36,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 29,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 29,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 170 1`] = `
[
  "CREATE TABLE person (
	name 		text,
	age			int4,
	location 	point
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "person",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "name",
                  "is_local": true,
                  "location": 23,
                  "typeName": {
                    "location": 30,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "age",
                  "is_local": true,
                  "location": 37,
                  "typeName": {
                    "location": 43,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "location",
                  "is_local": true,
                  "location": 50,
                  "typeName": {
                    "location": 60,
                    "names": [
                      {
                        "String": {
                          "sval": "point",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 180 1`] = `
[
  "CREATE TABLE emp (
	salary 		int4,
	manager 	name
) INHERITS (person)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "inhRelations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 62,
                  "relname": "person",
                  "relpersistence": "p",
                },
              },
            ],
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "emp",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "salary",
                  "is_local": true,
                  "location": 20,
                  "typeName": {
                    "location": 29,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "manager",
                  "is_local": true,
                  "location": 36,
                  "typeName": {
                    "location": 45,
                    "names": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 189 1`] = `
[
  "CREATE TABLE student (
	gpa 		float8
) INHERITS (person)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "inhRelations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 49,
                  "relname": "person",
                  "relpersistence": "p",
                },
              },
            ],
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "student",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "gpa",
                  "is_local": true,
                  "location": 24,
                  "typeName": {
                    "location": 30,
                    "names": [
                      {
                        "String": {
                          "sval": "float8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 197 1`] = `
[
  "CREATE TABLE stud_emp (
	percent 	int4
) INHERITS (emp, student)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "inhRelations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 51,
                  "relname": "emp",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 56,
                  "relname": "student",
                  "relpersistence": "p",
                },
              },
            ],
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "stud_emp",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "percent",
                  "is_local": true,
                  "location": 25,
                  "typeName": {
                    "location": 34,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 205 1`] = `
[
  "CREATE TABLE road (
	name		text,
	thepath 	path
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "road",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "name",
                  "is_local": true,
                  "location": 21,
                  "typeName": {
                    "location": 27,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "thepath",
                  "is_local": true,
                  "location": 34,
                  "typeName": {
                    "location": 43,
                    "names": [
                      {
                        "String": {
                          "sval": "path",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 214 1`] = `
[
  "CREATE TABLE ihighway () INHERITS (road)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "inhRelations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 35,
                  "relname": "road",
                  "relpersistence": "p",
                },
              },
            ],
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "ihighway",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 216 1`] = `
[
  "INSERT INTO ihighway
   SELECT *
   FROM ONLY road
   WHERE name ~ 'I- .*'",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "ihighway",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "location": 46,
                      "relname": "road",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 31,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 31,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "name",
                            },
                          },
                        ],
                        "location": 60,
                      },
                    },
                    "location": 65,
                    "name": [
                      {
                        "String": {
                          "sval": "~",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 67,
                        "sval": {
                          "sval": "I- .*",
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 222 1`] = `
[
  "CREATE TABLE shighway (
	surface		text
) INHERITS (road)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "inhRelations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 51,
                  "relname": "road",
                  "relpersistence": "p",
                },
              },
            ],
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "shighway",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "surface",
                  "is_local": true,
                  "location": 25,
                  "typeName": {
                    "location": 34,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 226 1`] = `
[
  "INSERT INTO shighway
   SELECT *, 'asphalt'
   FROM ONLY road
   WHERE name ~ 'State Hwy.*'",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "shighway",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "location": 57,
                      "relname": "road",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 31,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 31,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 34,
                      "val": {
                        "A_Const": {
                          "location": 34,
                          "sval": {
                            "sval": "asphalt",
                          },
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "name",
                            },
                          },
                        ],
                        "location": 71,
                      },
                    },
                    "location": 76,
                    "name": [
                      {
                        "String": {
                          "sval": "~",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 78,
                        "sval": {
                          "sval": "State Hwy.*",
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 244 1`] = `
[
  "create type textrange as range (subtype = text, collation = "C")",
  {
    "stmts": [
      {
        "stmt": {
          "CreateRangeStmt": {
            "params": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 42,
                      "names": [
                        {
                          "String": {
                            "sval": "text",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "subtype",
                  "location": 32,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 60,
                      "names": [
                        {
                          "String": {
                            "sval": "C",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "collation",
                  "location": 48,
                },
              },
            ],
            "typeName": [
              {
                "String": {
                  "sval": "textrange",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 275 1`] = `
[
  "create operator class part_test_int4_ops for type int4 using hash as
    operator 1 =,
    function 2 part_hashint4_noop(int4, int8)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateOpClassStmt": {
            "amname": "hash",
            "datatype": {
              "location": 50,
              "names": [
                {
                  "String": {
                    "sval": "int4",
                  },
                },
              ],
              "typemod": -1,
            },
            "items": [
              {
                "CreateOpClassItem": {
                  "itemtype": 1,
                  "name": {
                    "objname": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                  },
                  "number": 1,
                },
              },
              {
                "CreateOpClassItem": {
                  "itemtype": 2,
                  "name": {
                    "objargs": [
                      {
                        "TypeName": {
                          "location": 121,
                          "names": [
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                      {
                        "TypeName": {
                          "location": 127,
                          "names": [
                            {
                              "String": {
                                "sval": "int8",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    ],
                    "objfuncargs": [
                      {
                        "FunctionParameter": {
                          "argType": {
                            "location": 121,
                            "names": [
                              {
                                "String": {
                                  "sval": "int4",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                          "mode": "FUNC_PARAM_DEFAULT",
                        },
                      },
                      {
                        "FunctionParameter": {
                          "argType": {
                            "location": 127,
                            "names": [
                              {
                                "String": {
                                  "sval": "int8",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                          "mode": "FUNC_PARAM_DEFAULT",
                        },
                      },
                    ],
                    "objname": [
                      {
                        "String": {
                          "sval": "part_hashint4_noop",
                        },
                      },
                    ],
                  },
                  "number": 2,
                },
              },
            ],
            "opclassname": [
              {
                "String": {
                  "sval": "part_test_int4_ops",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 279 1`] = `
[
  "create function part_hashtext_length(value text, seed int8)
    returns int8 as $$
    select length(coalesce(value, ''))::int8
    $$ language sql strict immutable parallel safe",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "part_hashtext_length",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
    select length(coalesce(value, ''))::int8
    ",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 77,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 135,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "strict",
                  "location": 148,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "immutable",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "volatility",
                  "location": 155,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "safe",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "parallel",
                  "location": 165,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 43,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                  "name": "value",
                },
              },
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 54,
                    "names": [
                      {
                        "String": {
                          "sval": "int8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                  "name": "seed",
                },
              },
            ],
            "returnType": {
              "location": 72,
              "names": [
                {
                  "String": {
                    "sval": "int8",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 284 1`] = `
[
  "create operator class part_test_text_ops for type text using hash as
    operator 1 =,
    function 2 part_hashtext_length(text, int8)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateOpClassStmt": {
            "amname": "hash",
            "datatype": {
              "location": 50,
              "names": [
                {
                  "String": {
                    "sval": "text",
                  },
                },
              ],
              "typemod": -1,
            },
            "items": [
              {
                "CreateOpClassItem": {
                  "itemtype": 1,
                  "name": {
                    "objname": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                  },
                  "number": 1,
                },
              },
              {
                "CreateOpClassItem": {
                  "itemtype": 2,
                  "name": {
                    "objargs": [
                      {
                        "TypeName": {
                          "location": 123,
                          "names": [
                            {
                              "String": {
                                "sval": "text",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                      {
                        "TypeName": {
                          "location": 129,
                          "names": [
                            {
                              "String": {
                                "sval": "int8",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    ],
                    "objfuncargs": [
                      {
                        "FunctionParameter": {
                          "argType": {
                            "location": 123,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                          "mode": "FUNC_PARAM_DEFAULT",
                        },
                      },
                      {
                        "FunctionParameter": {
                          "argType": {
                            "location": 129,
                            "names": [
                              {
                                "String": {
                                  "sval": "int8",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                          "mode": "FUNC_PARAM_DEFAULT",
                        },
                      },
                    ],
                    "objname": [
                      {
                        "String": {
                          "sval": "part_hashtext_length",
                        },
                      },
                    ],
                  },
                  "number": 2,
                },
              },
            ],
            "opclassname": [
              {
                "String": {
                  "sval": "part_test_text_ops",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`test_setup.sql > line 298 1`] = `
[
  "create function fipshash(text)
    returns text
    strict immutable parallel safe leakproof
    return substr(encode(sha256($1::bytea), 'hex'), 1, 32)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "fipshash",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "strict",
                  "location": 52,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "immutable",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "volatility",
                  "location": 59,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "safe",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "parallel",
                  "location": 69,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "leakproof",
                  "location": 83,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                },
              },
            ],
            "returnType": {
              "location": 43,
              "names": [
                {
                  "String": {
                    "sval": "text",
                  },
                },
              ],
              "typemod": -1,
            },
            "sql_body": {
              "ReturnStmt": {
                "returnval": {
                  "FuncCall": {
                    "args": [
                      {
                        "FuncCall": {
                          "args": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "TypeCast": {
                                      "arg": {
                                        "ParamRef": {
                                          "location": 125,
                                          "number": 1,
                                        },
                                      },
                                      "location": 127,
                                      "typeName": {
                                        "location": 129,
                                        "names": [
                                          {
                                            "String": {
                                              "sval": "bytea",
                                            },
                                          },
                                        ],
                                        "typemod": -1,
                                      },
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "sha256",
                                    },
                                  },
                                ],
                                "location": 118,
                              },
                            },
                            {
                              "A_Const": {
                                "location": 137,
                                "sval": {
                                  "sval": "hex",
                                },
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "encode",
                              },
                            },
                          ],
                          "location": 111,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 145,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 32,
                          },
                          "location": 148,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "substr",
                        },
                      },
                    ],
                    "location": 104,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
